update netlify deploy configuration

--- a/.github/workflows/todoapp.yml
+++ b/.github/workflows/todoapp.yml
@@ -9,8 +9,8 @@ on:
 # Dagger plan gets configured via client environment variables
 env:
   # This needs to be unique across all of netlify.app
-  APP_NAME: todoapp-dagger-europa
-  NETLIFY_TEAM: dagger
+  APP_NAME: dagger-todoapp
+  NETLIFY_TEAM: timothyclifford
 
 jobs:
   dagger:
