--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,33 +6,32 @@
     # See https://docs.gitlab.com/ee/ci/docker/using_docker_build.html#docker-in-docker-with-tls-enabled-in-the-docker-executor
     DOCKER_HOST: tcp://docker:2376
 
-    DOCKER_TLS_VERIFY: '1'
-    DOCKER_TLS_CERTDIR: '/certs'
-    DOCKER_CERT_PATH: '/certs/client'
+    DOCKER_TLS_VERIFY: "1"
+    DOCKER_TLS_CERTDIR: "/certs"
+    DOCKER_CERT_PATH: "/certs/client"
 
     # Faster than the default, apparently
     DOCKER_DRIVER: overlay2
 
-    DOCKER_VERSION: '20.10'
+    DOCKER_VERSION: "20.10"
 
 .dagger:
   extends: [.docker]
   variables:
-    DAGGER_VERSION: 0.2.4
+    DAGGER_VERSION: 0.2.25
     DAGGER_LOG_FORMAT: plain
     DAGGER_CACHE_PATH: .dagger-cache
 
-    ARGS: ''
+    ARGS: ""
   cache:
     key: dagger-${CI_JOB_NAME}
     paths:
       - ${DAGGER_CACHE_PATH}
   before_script:
-    - apk add --no-cache curl
     - |
       # install dagger
       cd /usr/local
-      curl -L https://dl.dagger.io/dagger/install.sh | sh
+      wget -O - https://dl.dagger.io/dagger/install.sh | sh
       cd -
 
       dagger version
